# M1_P8

./: README.md
S1/Android/: cours_2_28_09.txt
S1/Android/OS Nomades/: P8_Sokoban.rar  Projet OS Nomade - Casse-tête en Android.pptx
S1/Inteligence Eco/CV-fr/: ABAK-KALI-Exercice_1.aux  ABAK-KALI-Exercice_1.out  ABAK-KALI-Exercice_1.tex  Cv_Nizar_ABAK_KALI.aux  Cv_Nizar_ABAK_KALI.out  Cv_Nizar_ABAK_KALI.tex  source.txt
S1/Inteligence Eco/cours/: fiche.odt  ifh.txt  notes.txt
S1/Intensif/cours2/: note.mkd  (+1 more)
S1/Intensif/testCmake1/: CMakeLists.txt
S1/Intensif/testCmake1/include/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt
S1/Intensif/testCmake1/src/: CMakeLists.txt  hello.c
S1/RepData/: notes.txt
S1/Reseaux/: Nouveau document texte.txt
S1/ReseauxM1/: Nouveau document texte.txt
S1/SMA/: Architectures.ppt  Langages.ppt  Lunar Lander.nlogo  NetlogoProjects.nlogo  Proie_Preda.nlogo  Ressource_Gestion.nlogo  TP1LOGO.nlogo  intro.ppt  mini-projet.nlogo  ressource.nlogo
S2/: planning M1 2esem prov 1516.xlsx
S2/Conduite_Gestion_Projet/: Cours1.md  Cours2.md  Cours3.md  Cours4.md  Cours5.md
S2/Mcontroller-Mprocesseur/: Chapitre_1_K60.ppt  Chapitre_2_K60.ppt  Chapitre_3_K60.ppt  Chapitre_4_K60.ppt  DMA.txt  DMA_MEM_POLL.ppt  Démarrage_code_warrior_K60.ppt  Nouveau document texte.txt  Readme_ K60.doc  TP1_énoncé.ppt  TP2_énoncé.odp  TP2_énoncé.ppt  TP3_enoncé.ppt  code ASCII.doc
S2/Robotique1/: Compte rendu TP robotique.odt  Révision Robotique.docx  fiche_revision.doc  note interressantes sur l'article.txt  pres.txt
S2/Validation/: fiches.docx
(+88 files in other folders)
